syntax = "proto3";

package com.phoenix.message.proto;

import "task_service/find_task_config_list.proto";
option java_multiple_files = true;

service TaskService {
  rpc RpcFindTaskConfigList (RpcFindTaskConfigListReq) returns (RpcFindTaskConfigListResp);
}